cedarentities/test/corpus/testfiles/healthcare_app.txt
================================================================================
healthcare_app
================================================================================

// https://github.com/cedar-policy/cedar/blob/2ab14af8cfdd7907f62785de8cba178e498938ca/cedar-policy-core/src/entities/cedar_syntax/testfiles/healthcare-app/input.cedarentities#L1-L21

namespace HealthCareApp {
    instance User::"Victor" in Role::"admin" {
        displayName: "Victor"
    };

    instance User::"DrSeuz" in Role::"doctor" {
        displayName: "Dr. Seuz"
    };

    instance Role::"admin";
    instance Role::"doctor";

    instance Appointment::"appointment003" in Patient::"Victor" {
        provider: User::"DrSeuz",
        patient: User::"Victor"
    };

    instance Patient::"Victor" {
        associatedUser: User::"Victor"
    };
}

--------------------------------------------------------------------------------

(entities
  (comment)
  (namespace
    (name
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (identifier)
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (identifier)
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (identifier)
          (entity_reference
            (identifier)
            (string
              (string_content))))
        (record_entry
          (identifier)
          (entity_reference
            (identifier)
            (string
              (string_content))))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (identifier)
          (entity_reference
            (identifier)
            (string
              (string_content))))))))
