cedarentities/test/corpus/testfiles/namespaces.txt
================================================================================
namespaces
================================================================================

// https://github.com/cedar-policy/cedar/blob/2ab14af8cfdd7907f62785de8cba178e498938ca/cedar-policy-core/src/entities/cedar_syntax/testfiles/namespaces/input.cedarentities#L1-L34

namespace PhotoApp {
    instance User::"alice" = {
        "name": "Alice"
    };
    instance User::"bob" in Group::"admins" = {
        "name": "Bob"
    };
    instance Group::"admins";
    instance Photo::"sunset.jpg" in Album::"vacation" = {
        "owner": User::"alice"
    };
    instance Album::"vacation";
}

namespace Auth::IAM {
    instance Role::"admin" = {
        "level": 10,
        "description": "Full access"
    };
    instance Role::"viewer" = {
        "level": 1,
        "description": "Read-only"
    };
    instance Policy::"allow_all" = {
        "role": Role::"admin",
        "target": PhotoApp::Album::"vacation"
    };
}

// Unnamespaced entity referencing namespaced ones
instance GlobalConfig::"main" = {
    "default_role": Auth::IAM::Role::"viewer",
    "app_owner": PhotoApp::User::"alice"
};

--------------------------------------------------------------------------------

(entities
  (comment)
  (namespace
    (name
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (string
            (string_content))
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (string
            (string_content))
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (string
            (string_content))
          (entity_reference
            (identifier)
            (string
              (string_content))))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))))
  (namespace
    (name
      (identifier)
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (string
            (string_content))
          (integer))
        (record_entry
          (string
            (string_content))
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (string
            (string_content))
          (integer))
        (record_entry
          (string
            (string_content))
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (string
            (string_content))
          (entity_reference
            (identifier)
            (string
              (string_content))))
        (record_entry
          (string
            (string_content))
          (entity_reference
            (identifier)
            (identifier)
            (string
              (string_content)))))))
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (string
          (string_content))
        (entity_reference
          (identifier)
          (identifier)
          (identifier)
          (string
            (string_content))))
      (record_entry
        (string
          (string_content))
        (entity_reference
          (identifier)
          (identifier)
          (string
            (string_content)))))))
