cedarentities/test/corpus/tiny_sandboxes/sample_1.txt
================================================================================
sample_1
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample1/entity.json

instance User::"alice" in UserGroup::"jane_friends" { age: 18 };
instance UserGroup::"jane_friends";
instance Action::"view";
instance Photo::"VacationPhoto94.jpg" in Album::"jane_vacation";
instance Album::"jane_vacation";

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (record
      (record_entry
        (identifier)
        (integer))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_reference
        (identifier)
        (string
          (string_content)))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
