cedarentities/test/corpus/tiny_sandboxes/sample_2.txt
================================================================================
sample_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample2/entity.json

instance User::"bob";
instance Action::"view";
instance Action::"edit";
instance Photo::"VacationPhoto94.jpg" in Album::"jane_vacation" { owner: User::"bob" };
instance Album::"jane_vacation";

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (record
      (record_entry
        (identifier)
        (entity_reference
          (identifier)
          (string
            (string_content))))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
