cedarentities/test/corpus/tiny_sandboxes/sample_4.txt
================================================================================
sample_4
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample4/entity.json

instance User::"bob";
instance Action::"view";
instance Action::"edit";
instance Photo::"VacationPhoto94.jpg" { owner: User::"bob" };

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (entity_reference
          (identifier)
          (string
            (string_content)))))))
