cedarentities/test/corpus/tiny_sandboxes/sample_5.txt
================================================================================
sample_5
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample5/entity.json

instance User::"bob" { addr: ip("127.0.0.1") };
instance Action::"view";
instance Photo::"VacationPhoto94.jpg" { owner: User::"bob" };

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (extension_call
          (name
            (identifier))
          (string
            (string_content))))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (entity_reference
          (identifier)
          (string
            (string_content)))))))
