cedarentities/test/corpus/tiny_sandboxes/sample_6.txt
================================================================================
sample_6
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample6/entity.json

instance User::"alice" in UserGroup::"guardians" { account: Account::"alice" };
instance Account::"alice" { age: 17 };
instance UserGroup::"guardians";
instance Action::"view";
instance ScreenTime::"activity";

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (record
      (record_entry
        (identifier)
        (entity_reference
          (identifier)
          (string
            (string_content))))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (integer))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
