cedarentities/test/corpus/tiny_sandboxes/sample_7.txt
================================================================================
sample_7
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample7/entity.json

namespace PhotoFlash::Data {
  instance User::"alice" in UserGroup::"jane_friends";
  instance UserGroup::"jane_friends";
  instance Action::"view";
  instance Photo::"VacationPhoto94.jpg" in Album::"jane_vacation";
  instance Album::"jane_vacation";
}

--------------------------------------------------------------------------------

(entities
  (comment)
  (namespace
    (name
      (identifier)
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content)))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))))
