cedarentities/test/corpus/tiny_sandboxes/sample_9.txt
================================================================================
sample_9
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/tiny_sandboxes/sample9/entity.json

instance Action::"view";
instance User::"Bob";
instance Photo::"VacationPhoto94.jpg" { owner: User::"Bob" };

--------------------------------------------------------------------------------

(entities
  (comment)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (entity_reference
          (identifier)
          (string
            (string_content)))))))
